# multi-project-1

./: .gitignore  CMakeLists.txt  README.md  build.bat
projects/: CMakeLists.txt
projects/linked_list/: CmakeLists.txt  linked_list.cpp  linked_list.hpp  templates_list.cpp  test_list.cpp
projects/long_number/: CMakeLists.txt
projects/long_number/src/: CMakeLists.txt  long_number.cpp  long_number.hpp
projects/long_number/test/: CMakeLists.txt  tests.cpp
projects/long_number/test2/: CMakeLists.txt  ibusko_test_long_number.cpp
projects/obuchaika/: CMakeLists.txt  main.cpp  main.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
projects/sort/: CMakeLists.txt
projects/sort/src/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp
projects/sort/test/: CMakeLists.txt  test_bubble.cpp
projects/vector/: CmakeLists.txt  templates_vector.cpp  test_vector.cpp  vector.cpp  vector.hpp
